# opencl-nif

./: .clang-format  .gitignore  CMakeLists.txt  ErlangOpenCL.cpp  ErlangOpenCL.h  README.md  build.bat  erlang_opencl.c  erlang_opencl.erl  erlang_opencl_nif.c  mix.exs  opencl.c  test.bat  vsenv.bat
lib/: open_cl.ex
priv/: vector_add_kernel.cl
script/: build_nif.bat  mex.ps1  mix-test.ps1  opencl.erl  smoke-test.bat  test.bat
src/nif/: Misc.cpp  Misc.h  compute.c  compute.cpp  compute.h  entrypoints.c  entrypoints.cpp  opencl_nif.c  opencl_nif.cpp  source.c  source.h
test/: open_cl_test.exs
test/windows/: erlang_opencl.erl  windows_test.erl
